--- a/index.html
+++ b/index.html
@@ -1,10 +1,16 @@
 <!DOCTYPE html>
-<html lang="en">
+<html>
   <head>
     <meta charset="UTF-8" />
+    <link rel="stylesheet" href="style.css"/>
+    <scrip src="app.js"></script/>
     <title>Juego de memoria</title>
+
   </head>
   <body>
-    <h1></h1>
+    <h2>
+      puntaje:<span id="resultado"></span>
+      <div class="cuadricula"></div>
+    </h2>
   </body>
 </html>
