--- a/index.html
+++ b/index.html
@@ -1,16 +1,15 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="stylesheet" href="style.css"/>
-    <scrip src="app.js"></script/>
+    <link rel="stylesheet" href="s.css" />
+    <script src="app.js"></script>
     <title>Juego de memoria</title>
-
   </head>
   <body>
-    <h2>
-      puntaje:<span id="resultado"></span>
+    <h3>
+      Puntaje: <span id="resultado"></span>
       <div class="cuadricula"></div>
-    </h2>
+    </h3>
   </body>
 </html>
